# stapler

./: .gitignore  Cargo.toml
doc/: spec.md
doc/example/: add.sta  block.sta  c_func.sta  hello_world.sta
doc/example/module/: greet.sta  module_example.sta
examples/: extern.sta  person.sta  simp_person.sta
src/: ast.rs  builder.rs  char_reader.rs  checker.rs  codegen.rs  compiler.rs  decl_table.rs  lexer.rs  main.rs  parser.rs  pos.rs  symbol_table.rs  token.rs  utils.rs
src/ast/: arg.rs  block.rs  decl.rs  ident.rs  mod.rs  module.rs  module_ast.rs  param.rs  ref.rs  stmt.rs  type.rs
src/ast/expr/: call_expr.rs  composite_expr.rs  ident.rs  ident_expr.rs  int_literal_expr.rs  member_expr.rs  mod.rs  postfix_expr.rs  ref_expr.rs  str_literal.rs  str_literal_expr.rs
src/ast/stmt/: decl.rs  decl_stmt.rs  expr.rs  expr_stmt.rs  extern.rs  extern_stmt.rs  mod.rs  return.rs  return_stmt.rs  type_stmt.rs  typedef_stmt.rs
src/ast/stmt/expr/: call.rs  ident.rs  int_literal.rs  object.rs  str_literal.rs
src/ast/type/: func.rs  pointer.rs  primitive.rs
src/ast/types/: array_type.rs  composite_type.rs  func.rs  func_type.rs  int_type.rs  mod.rs  ptr.rs  ptr_type.rs  ref_type.rs  struct_type.rs
src/asts/: block.rs  mod.rs  param.rs  program.rs
src/asts/stmt/: decl.rs  extern.rs  mod.rs
src/asts/stmt/expr/: assign.rs  call.rs  ident.rs  int_literal.rs  mod.rs  str_literal.rs
src/asts/type/: func.rs  mod.rs  pointer.rs  primitive.rs
src/utils/: format.rs  mod.rs
