[package]
name = "stapler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
phf = { version = "0.11", features = ["macros"] }
inkwell = { version = "0.2", features = ["llvm16-0"] }
clap = { version = "4.3.21", features = ["derive"] }
